# app/demo/static/v1/swagger.json
@@ -16,7 +16,7 @@
     "Adv_compr": {
       "type": "object",
       "properties": {
-        "time": {
+        "factor": {
           "type": "string"
         },
         "coefficients": {
@@ -33,10 +33,13 @@
       "type": "object",
       "properties": {
         "messages": {
-          "type": "object",
-          "properties": {
-            "text": {
-              "type": "string"
+          "type": "array",
+          "items": {
+            "type": "object",
+            "properties": {
+              "text": {
+                "type": "string"
+              }
             }
           }
         }
@@ -44,6 +47,102 @@
     }
   },
   "paths": {
+    "/factor/highest": {
+      "get": {
+        "operationId": "factor_highest",
+        "tags": [
+          "Advertising Comparison"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/Chatfuel_text"
+            }
+          },
+          "400": {
+            "description": "Invalid status value"
+          }
+        }
+      }
+    },
+    "/factor/positive": {
+      "get": {
+        "operationId": "factor_positive",
+        "tags": [
+          "Advertising Comparison"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/Chatfuel_text"
+            }
+          },
+          "400": {
+            "description": "Invalid status value"
+          }
+        }
+      }
+    },
+    "/factor/negative": {
+      "get": {
+        "operationId": "factor_negative",
+        "tags": [
+          "Advertising Comparison"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/Chatfuel_text"
+            }
+          },
+          "400": {
+            "description": "Invalid status value"
+          }
+        }
+      }
+    },
+    "/suggestion": {
+      "get": {
+        "operationId": "suggestion",
+        "tags": [
+          "Advertising Comparison"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/Chatfuel_text"
+            }
+          },
+          "400": {
+            "description": "Invalid status value"
+          }
+        }
+      }
+    },
+    "/advertisements/chatfuel": {
+      "get": {
+        "operationId": "getComp_chatfuel",
+        "summary": "Get all Comparative Advertising between Samsung and Apple",
+        "tags": [
+          "Advertising Comparison"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/Chatfuel_text"
+            }
+          },
+          "400": {
+            "description": "Invalid status value"
+          }
+        }
+      }
+    },
     "/advertisements": {
       "get": {
         "operationId": "get_comparison",
