# app/demo/v1/api/suggestion.py
@@ -1,0 +1,14 @@
+# -*- coding: utf-8 -*-
+from __future__ import absolute_import, print_function
+
+from flask import request, g
+
+from . import Resource
+from .. import schemas
+
+
+class Suggestion(Resource):
+
+    def get(self):
+
+        return {}, 200, None
